EB-2008-12-04-0: Enhancemn.: - Added new test for which tests qalter in
                               combination with JSV on server side
                             - Added additional check for JSV URL parsing
                 Review:     MD

RH-2008-12-03-0: Bugfix:     manage_admin_user and assigned_resource_reset did not 
                             work with the fix of issue 582
                 Enhancem.:  o check for issue 582 added 
                             o new utility methods wait_for_resource_info_opt and
                               get_component_info_opt
                 Review:     TB

HP-2008-12-03-0: Bugfix:     fixed error in architecture resolving in qhost test
                 Review:     MD

CR-2008-12-03-1: Bugfix:     - fixed error when setting up "sendmail" as default
                               mailing application
                 Review:     MD

CR-2008-12-03-0: Bugfix:     - fixed unclear error message in wait_for_remote_file()
                             - increased timeouts when waiting for qmaster lock file
                               in shadowd/migrate test from 30 to 60 seconds.
                 Review:     DG

RH-2008-12-02-0: Bugfix:     open_remote_spawn_process could not handle germany
                             password question. To match the password question
                             the following regexp is now used: [Pp]asswor[dt]:
                 Review:     CR

JG-2008-12-02-0: Bugfix:     fixed 6.0 and 6.1 installation without jmx port set
				     Review:     CR

HP-2008-12-02-0: Bugfix:     Fixed error in "pwd" check in user_permissions test
                 Issue:      268
                 Review:     MD   

CR-2008-12-01-0: Bugfix:     Fixed TCL error in testsuite framework procedure
                             "execute_test_preparation_procedure()"

TB-2008-11-28-1: Bugfix:     o fixed Hedeby test slo/maxPendingJobs/withJobFilter,