@@ -1,3 +1,6 @@
+HP-2008-12-04-0: Bugfix:     Fixed wrong error messages in performance/commlib test
+                 Review:     CR
+
 EB-2008-12-04-0: Enhancemn.: - Added new test for which tests qalter in
                                combination with JSV on server side
                              - Added additional check for JSV URL parsing
